--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "rollup -c",
     "test": "jest src",
     "lint": "eslint src",
-    "prepublish": "(git diff-index --quiet HEAD -- || (echo \"There are uncommitted changes\"; && exit;)) && node --experimental-modules publish.mjs",
+    "prepublishOnly": "(git diff-index --quiet HEAD -- || (echo \"There are uncommitted changes\"; && exit;)) && node --experimental-modules publish.mjs",
     "postpublish": "git add package.json && git commit -m \"bump and publish %npm_package_version%\" && git push"
   },
   "author": "DVLP",
