CDN version update

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "optimesh",
   "version": "1.0.42",
   "description": "OptiMesh reduces meshes resolution to optimize performance, memory usage and download size",
-  "cdn": "https://cdn.jsdelivr.net/npm/optimesh@1.0.32/build/main.js",
+  "cdn": "https://cdn.jsdelivr.net/npm/optimesh@1.0.42/build/main.js",
   "main": "build/main.js",
   "jsnext:main": "src/main.js",
   "module": "src/main.js",
   "scripts": {
     "start": "npx http-server . -o -c-1",
-    "build": "cp ./src/threeImport.globalThree.js ./src/threeImport.js && rollup -c",
+    "build": "cp ./src/threeImport.globalThree.js ./src/threeImport.js  rollup -c",
     "test": "jest src",
     "lint": "eslint src",
     "prepublishOnly": "(git diff-index --quiet HEAD -- || (echo \"There are uncommitted changes\"; && exit;)) && node --experimental-modules publish.mjs",
